# media-sorter

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  Makefile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.claude/agents/: backend-developer.md  documentation-writer.md  frontend-developer.md  pattern-guard.md  refactoring-specialist.md  researcher.md  reviewer.md  security-auditor.md  team-lead.md  tester.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release-please.yml
.husky/: pre-commit
docs/: CONSTITUTION.md
docs/discoveries/: geo-crate-choice.md  metadata-crate-choice.md
docs/specs/: STATUS.md  _template.md  epic-01-foundation.md  epic-02-source-scan.md  epic-03-metadata.md  (+12 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: extensions.rs  mod.rs
src-tauri/src/dto/: mod.rs
src-tauri/src/geo/: mod.rs  repository.rs  service.rs
src-tauri/src/history/: command.rs  dto.rs  empty_dirs.rs  gc.rs  mod.rs  repository.rs  service.rs  summary.rs
src-tauri/src/i18n/: mod.rs  months.rs  registry.rs
src-tauri/src/metadata/: mod.rs  service.rs
src-tauri/src/scanning/: command.rs  dto.rs  filters.rs  mod.rs  repository.rs  service.rs
src-tauri/src/settings/: command.rs  defaults.rs  dto.rs  mod.rs  repository.rs  service.rs  validator.rs
src-tauri/src/sorting/: command.rs  dto.rs  mod.rs
src-tauri/src/sorting/estimate/: cache.rs  constants.rs  mod.rs  service.rs
src-tauri/src/sorting/planner/: mod.rs  service.rs  strategy.rs
src-tauri/src/sorting/runner/: conflict.rs  constants.rs  dto.rs  emitter.rs  events.rs  fingerprint.rs  fs_repo.rs  job.rs  log.rs  mod.rs  preflight.rs  service.rs
src-tauri/src/utils/: mod.rs  probe.rs  volume.rs
(+145 files in other folders)
