[package]
name = "media-sorter"
version = "0.1.0"
description = "Desktop app that sorts photos and videos into Month/Year folders, then by geolocation derived from EXIF."
authors = ["Vasyl Kaminskyi <vasyl.kaminskyi@intercode.io>"]
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "media_sorter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-opener = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.52", features = ["sync"] }
nom-exif = "2.8"
rayon = "1.12"
reverse_geocoder = "4.1.1"
rust_iso3166 = "0.1.14"
sha2 = "0.11"
fs4 = "1"
tauri-plugin-store = "2.4.3"
sys-locale = "0.3.2"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
